tests/NormalTests/paczka1/fuzzy1/33080408.err
Error in line 2: MG24dpq1 A465 15,0
Error in line 1: nRfULaW A545 66,7
Error in line 4: MG24dpq1 A545 16,5
Error in line 7: A545 A595 45,3
Error in line 12: A545 A545 48,0
Error in line 18: nRfULaW A465 0,8
Error in line 27: hPAPg A595 98,5
Error in line 32: MG24dpq1 A595 27,1
